# Quidwallet

./: CMakeLists.txt  CMakeLists.txt~  QUIDWALLET -SECURITY.md  Quid wallet info.md  QuidWallet.cmake  README.md  README.md~
src/: CommandLineParser.cpp  CommandLineParser.h  CryptoNoteWrapper.cpp  CurrencyAdapter.cpp  CurrencyAdapter.h  LoggerAdapter.cpp  LoggerAdapter.h  NodeAdapter.cpp  NodeAdapter.h  NodeAdapter.h~  QuidWrapper.h  Settings.cpp  Settings.h  SignalHandler.cpp  SignalHandler.h  WalletAdapter.cpp  WalletAdapter.h  main.cpp  miniupnpcstrings.h  quidwallet.rc  resources.qrc
src/gui/: AboutDialog.cpp  AboutDialog.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AddressBookModel.h  AnimatedLabel.cpp  AnimatedLabel.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ExitWidget.cpp  ExitWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  NewAddressDialog.cpp  NewAddressDialog.h  NewPasswordDialog.cpp  NewPasswordDialog.h  OverviewFrame.cpp  OverviewFrame.h  PasswordDialog.cpp  PasswordDialog.h  ReceiveFrame.cpp  ReceiveFrame.h  RecentTransactionsModel.cpp  RecentTransactionsModel.h  SendFrame.cpp  SendFrame.h  SortedTransactionsModel.cpp  SortedTransactionsModel.h  TransactionDetailsDialog.cpp  TransactionDetailsDialog.h  TransactionFrame.cpp  TransactionFrame.h  TransactionsFrame.cpp  TransactionsFrame.h  TransactionsListModel.cpp  (+6 more)
src/gui/ui/: aboutdialog.ui
src/images/: quid.icns
